WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168707
[User Timing] Throw a SyntaxError for performance.measure if mark name is not found
https://bugs.webkit.org/show_bug.cgi?id=168707
Summary
[User Timing] Throw a SyntaxError for performance.measure if mark name is not...
Joseph Pecoraro
Reported
2017-02-21 21:15:25 PST
[User Timing] Throw a SyntaxError for performance.measure if mark name is not found This used to be part of User Timing Level 1 and User Timing Level 2 didn't include the text. Lets just be consistent and throw a SyntaxError (other browsers I tested do). There is an open issue on this:
https://github.com/w3c/user-timing/issues/21
Attachments
[PATCH] Proposed Fix
(5.68 KB, patch)
2017-02-21 21:18 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2017-02-21 21:18:44 PST
Created
attachment 302365
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 2
2017-02-21 21:45:38 PST
Comment on
attachment 302365
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 302365 Committed
r212806
: <
http://trac.webkit.org/changeset/212806
>
WebKit Commit Bot
Comment 3
2017-02-21 21:45:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug