[User Timing] Throw a SyntaxError for performance.measure if mark name is not found https://bugs.webkit.org/show_bug.cgi?id=168707

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-02-21
Reviewed by Ryosuke Niwa.

Source/WebCore:

Test: performance-api/performance-measure-name.html

* page/PerformanceUserTiming.cpp:
(WebCore::UserTiming::findExistingMarkStartTime):
Instead of returning zero, throw a SyntaxError. This is more in line
with User Timing Level 1 and behavior in Window. This is an issue with
the Level 2 spec: https://github.com/w3c/user-timing/issues/21

LayoutTests:

* performance-api/performance-measure-name-expected.txt: Added.
* performance-api/performance-measure-name.html: Added.
* performance-api/resources/measure-name.js: Added.
Test to cover SyntaxError for missing measure start/end mark names.

Canonical link: https://commits.webkit.org/185711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212806 268f45cc-cd09-0410-ab3c-d52691b4dbfc